[package]
name = "webproto"
version = "0.1.0"
edition = "2021"
authors = ["asbezier <asbezier@outlook.com>"]

publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/OpenBezier/webproto"
description = "webproto"

[dependencies]
anyhow = "1.0.72"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.2"

# tokio = { version = "1", features = ["full"] }
# tracing = "0.1.37"
# thiserror = "1.0.44"
# serde_json = "1"
# crossbeam = "0.8.2"
# dashmap = "5.5"
# actix = "0.13.0"
# uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
